--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,8 +27,6 @@
     <string name="try_again_name">Please enter a name of more than 6 characters</string>
     <string name="try_again_password">Please enter a password of more than 6 characters</string>
     <string name="try_again_passwords">Your passwords don\'t match</string>
-    <string name="hint_password">Password</string>
-    <string name="hint_email">Email</string>
     <string name="loading_image_content_descrption">loading image</string>
     <string name="forgot_password">Forgot Password?</string>
 
@@ -49,4 +47,33 @@
     <string name="fb_login_protocol_scheme">fb1288145851634719</string>
     <string name="finish_button">Finish</string>
 
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hint_name">Name</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_confirm_password">Confirm Password</string>
+    <string name="sign_up_button_text">Sign Up</string>
+    <string name="login_button_text">Login</string>
+
+    // Cancel Dialog
+    <string name="cancel_dialog_title">Are You Sure?</string>
+    <string name="cancel_dialog_message">You have unsaved content that will be lost unless you save it.</string>
+    <string name="cancel_positive_button">Yes, Leave</string>
+    <string name="cancel_negative_button">No, Stay</string>
+    <string name="pick_date">Pick Offer Deadline</string>
+
+    // Offer Categories
+    <string-array name="offer_category_array">
+        <item>Healthcare</item>
+        <item>Social</item>
+        <item>Business</item>
+        <item>Free Service</item>
+    </string-array>
+
+    // Offer Status
+    <string-array name="offer_status_array">
+        <item>Open</item>
+        <item>Bid Confirmed</item>
+        <item>closed</item>
+    </string-array>
 </resources>
